--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="galery-set__name">
+                <div class="galery-set__wraper">
                   <h2 class="galery-set__title">Технокряк</h2>
                   <p class="galery-set__name">Веб-сайт</p>
                 </div>
@@ -119,7 +119,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="galery-set__name">
+                <div class="galery-set__wraper">
                   <h2 class="galery-set__title">Постер New Orlean vs Golden Star</h2>
                   <p class="galery-set__name">Дизайн</p>
                 </div>
@@ -136,7 +136,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="galery-set__name">
+                <div class="galery-set__wraper">
                   <h2 class="galery-set__title">Ресторан Seafood</h2>
                   <p class="galery-set__name">Приложение</p>
                 </div>
@@ -153,7 +153,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="galery-set__name">
+                <div class="galery-set__wraper">
                   <h2 class="galery-set__title">Проект Prime</h2>
                   <p class="galery-set__name">Маркетинг</p>
                 </div>
@@ -170,7 +170,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="galery-set__name">
+                <div class="galery-set__wraper">
                   <h2 class="galery-set__title">Проект Boxes</h2>
                   <p class="galery-set__name">Приложение</p>
                 </div>
@@ -191,7 +191,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="galery-set__name">
+                <div class="galery-set__wraper">
                   <h2 class="galery-set__title">Inspiration has no Borders</h2>
                   <p class="galery-set__name">Веб-сайт</p>
                 </div>
@@ -212,7 +212,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="galery-set__name">
+                <div class="galery-set__wraper">
                   <h2 class="galery-set__title">Издание Limited Edition</h2>
                   <p class="galery-set__name">Дизайн</p>
                 </div>
@@ -229,7 +229,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="galery-set__name">
+                <div class="galery-set__wraper">
                   <h2 class="galery-set__title">Проект LAB</h2>
                   <p class="galery-set__name">Маркетинг</p>
                 </div>
@@ -246,7 +246,7 @@
                     конкурентов.
                   </p>
                 </div>
-                <div class="galery-set__name">
+                <div class="galery-set__wraper">
                   <h2 class="galery-set__title">Growing Business</h2>
                   <p class="galery-set__name">Приложение</p>
                 </div>
