--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
   <body>
     <!-- Шапка сайта -->
     <header class="header">
-      <div class="container header__container">
+      <div class="header__container">
         <!-- Логотип сайта -->
         <a href="" class="logo"><span class="logo__accent">Web</span>Studio</a>
+        <button type="button" class="menu__button">
+          <svg width="40" height="40" class="button__menu">
+            <use href="./images/new-sprite.svg#icon-menu"></use>
+        </button>
         <!-- Навигация, телефон, нотакты -->
         <!-- Основной блок навигации -->
-        <nav class="navigation">
+        <!-- <nav class="navigation">
           <ul class="navigation-set">
             <li class="navigation-set__item">
               <a href="./index.html" class="navigation-set__link navigation-set__link--current"
@@ -42,9 +46,9 @@
               <a href="" class="navigation-set__link">Контакты</a>
             </li>
           </ul>
-        </nav>
+        </nav> -->
         <!-- Телефон и e-mail -->
-        <ul class="contacts-set">
+        <!-- <ul class="contacts-set">
           <li class="contacts-set__item">
             <a href="mailto:info@devstudio.com" class="contacts-set__link">
               <svg width="16" height="12" class="contacts-set__icon">
@@ -61,7 +65,7 @@
               <span>+380 961 111 111</span>
             </a>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </header>
 
