--- a/index.html
+++ b/index.html
@@ -23,17 +23,11 @@
   <body>
     <!-- Шапка сайта -->
     <header class="header">
-      <div class="header__container">
+      <div class="container header__container">
         <!-- Логотип сайта -->
         <a href="" class="logo"><span class="logo__accent">Web</span>Studio</a>
-        <button type="button" class="menu--button">
-          <svg width="40" height="40" class="menu--button__icon">
-            <use href="./images/new-sprite.svg#icon-menu"></use>
-        </button>
-        
         <!-- Навигация, телефон, нотакты -->
         <!-- Основной блок навигации -->
-        <!-- <div class="navigation-wrap">
         <nav class="navigation">
           <ul class="navigation-set">
             <li class="navigation-set__item">
@@ -69,7 +63,6 @@
           </li>
         </ul>
       </div>
-      </div> -->
     </header>
 
     <!--Уникальный контент страницы  -->
