--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
       <div class="container header__container">
         <!-- Логотип сайта -->
         <a href="" class="logo"><span class="logo__accent">Web</span>Studio</a>
+        <button type="button" class="menu-button">
+          <svg width="40" height="40" class="menu-button__icon">
+            <use href="./images/new-sprite.svg#icon-menu"></use>
+            <use href="./images/new-sprite.svg#icon-close_menu"></use>
+          </svg>
+        </button>
         <!-- Навигация, телефон, нотакты -->
-        <!-- Основной блок навигации -->
-        <nav class="navigation">
+        <!-- <nav class="navigation">
           <ul class="navigation-set">
             <li class="navigation-set__item">
               <a href="./index.html" class="navigation-set__link navigation-set__link--current"
@@ -43,7 +48,7 @@
             </li>
           </ul>
         </nav>
-        <!-- Телефон и e-mail -->
+        
         <ul class="contacts-set">
           <li class="contacts-set__item">
             <a href="mailto:info@devstudio.com" class="contacts-set__link">
@@ -61,14 +66,14 @@
               <span>+380 961 111 111</span>
             </a>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </header>
 
     <!--Уникальный контент страницы  -->
     <main>
       <!-- Заголовок страницы -->
-      <section class="hero">
+      <section class="hero container">
         <div>
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
