--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Шапка сайта -->
     <header class="header">
-      <div class="container header__container">
+      <div class="header__container">
         <!-- Логотип сайта -->
         <a href="" class="logo"><span class="logo__accent">Web</span>Studio</a>
         <button type="button" class="menu-button">
@@ -73,7 +73,7 @@
     <!--Уникальный контент страницы  -->
     <main>
       <!-- Заголовок страницы -->
-      <section class="hero container">
+      <section class="hero">
         <div>
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
