--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Шапка сайта -->
     <header class="header">
-      <div class="header__container">
+      <div class="header__container container">
         <!-- Логотип сайта -->
         <a href="" class="logo"><span class="logo__accent">Web</span>Studio</a>
         <button type="button" class="menu-button">
@@ -83,7 +83,7 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
-          <ul class="advantages-set">
+          <ul class="advantages-set container">
             <li class="advantages-set__item">
               <div class="advantages__container-icon">
                 <svg width="70" height="70">
