--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
-          <ul class="advantages-set container">
+          <ul class="advantages-set">
             <li class="advantages-set__item">
               <div class="advantages__container-icon">
                 <svg width="70" height="70">
