--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!--Уникальный контент страницы  -->
     <main>
       <!-- Заголовок страницы -->
-      <section class="hero">
+      <section class="hero container">
         <div>
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
