--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@
     <main>
       <!-- Заголовок страницы -->
       <section class="hero container">
-        <div>
-          <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
-        </div>
+        <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
       </section>
       <!-- Особенности компаниии -->
       <section class="section">
@@ -136,7 +134,7 @@
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section class="section section--padding">
+      <section class="section section--padding display">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="our-work-set">
@@ -163,8 +161,8 @@
       </section>
 
       <!-- Наша команда -->
-      <section class="section section--bg-color">
-        <div class="container">
+      <section class="section">
+        <div class="container container--bg-color container--padding">
           <h2 class="section__title">Наша команда</h2>
           <ul class="our-team-set">
             <li class="our-team-set__item">
