--- a/index.html
+++ b/index.html
@@ -166,7 +166,14 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="our-team-set">
             <li class="our-team-set__item">
-              <img src="./images/Игорь-Демьяненко.jpg" alt="фото Игорь Демьяненко" width="270" />
+              <div class="our-team-set__thumb">
+                <img
+                  class="our-team-set__img"
+                  crcset="./images/igor-dem-450-1x.jpg 1x, ./images/igor-dem-450-1x.jpg 2x"
+                  src="./images/igor-dem-450-1x.jpg"
+                  alt="фото Игорь Демьяненко"
+                />
+              </div>
               <div class="our-team-set__wrap">
                 <h3 class="our-team-set__title">Игорь Демьяненко</h3>
                 <p class="our-team-set__text">Product Designer</p>
@@ -204,7 +211,14 @@
             </li>
 
             <li class="our-team-set__item">
-              <img src="./images/Ольга-Репина.jpg" alt="фото Ольга Репина" width="270" />
+              <div class="our-team-set__thumb">
+                <img
+                  class="our-team-set__img"
+                  crcset="./images/olga-rep-450-1x.jpg 1x, ./images/olga-rep-450-2x.jpg 2x"
+                  src="./images/olga-rep-450-1x.jpg"
+                  alt="фото Ольга Репина"
+                />
+              </div>
               <div class="our-team-set__wrap">
                 <h3 class="our-team-set__title">Ольга Репина</h3>
                 <p class="our-team-set__text">Frontend Developer</p>
@@ -242,7 +256,14 @@
             </li>
 
             <li class="our-team-set__item">
-              <img src="./images/Николай-Тарасов.jpg" alt="фото Николай Тарасов" width="270" />
+              <div class="our-team-set__thumb">
+                <img
+                  class="our-team-set__img"
+                  crcset="./images/nick-tar-450-1x.jpg 1x, ./images/nick-tar-450-2x.jpg 2x"
+                  src="./images/nick-tar-450-1x.jpg"
+                  alt="фото Николай Тарасов"
+                />
+              </div>
               <div class="our-team-set__wrap">
                 <h3 class="our-team-set__title">Николай Тарасов</h3>
                 <p class="our-team-set__text">Marketing</p>
@@ -280,7 +301,14 @@
             </li>
 
             <li class="our-team-set__item">
-              <img src="./images/Михаил-Ермаков.jpg" alt="фото Михаил Ермаков" width="270" />
+              <div class="our-team-set__thumb">
+                <img
+                  class="our-team-set__img"
+                  crcset="./images/mich-erm-270-1x.jpg 1x, ./images/mich-erm-270-2x.jpg 2x"
+                  src="./images/mich-erm-270-1x.jpg"
+                  alt="фото Михаил Ермаков"
+                />
+              </div>
               <div class="our-team-set__wrap">
                 <h3 class="our-team-set__title">Михаил Ермаков</h3>
                 <p class="our-team-set__text">UI Designer</p>
