--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
               <div class="our-team-set__thumb">
                 <img
                   class="our-team-set__img"
-                  crcset="./images/igor-dem-450-1x.jpg 1x, ./images/igor-dem-450-1x.jpg 2x"
+                  srcset="./images/igor-dem-450-1x.jpg 450w, ./images/igor-dem-450-2x.jpg 900w"
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                   src="./images/igor-dem-450-1x.jpg"
                   alt="фото Игорь Демьяненко"
                 />
