--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <source
                   srcset="./images/igor-dem-450-1x.jpg 450w, ./images/igor-dem-450-2x.jpg 900w"
                   media="(min-width: 0)"
-                  sizes="450px"
+                  sizes="450px, 100vw"
                 />
                 <img src="./images/igor-dem-450-1x.jpg" alt="фото Игорь Демьяненко" />
               </picture>
