--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <use href="./images/new-sprite.svg#icon-close_menu"></use>
           </svg>
         </button>
-        <!-- Навигация, телефон, нотакты -->
-        <!-- <nav class="navigation">
+        <!-- Навигация, телефон, контакты -->
+        <nav class="navigation">
           <ul class="navigation-set">
             <li class="navigation-set__item">
               <a href="./index.html" class="navigation-set__link navigation-set__link--current"
@@ -48,7 +48,6 @@
             </li>
           </ul>
         </nav>
-        
         <ul class="contacts-set">
           <li class="contacts-set__item">
             <a href="mailto:info@devstudio.com" class="contacts-set__link">
@@ -66,11 +65,10 @@
               <span>+380 961 111 111</span>
             </a>
           </li>
-        </ul> -->
+        </ul>
       </div>
     </header>
 
-    <!--Уникальный контент страницы  -->
     <main>
       <!-- Заголовок страницы -->
       <section class="hero container">
@@ -177,7 +175,7 @@
                 />
                 <source
                   srcset="./images/igor-dem-450-1x.jpg 450w, ./images/igor-dem-450-2x.jpg 900w"
-                  media="(min-width: 0)"
+                  media="(min-width: 480px)"
                   sizes="450px, 100vw"
                 />
                 <img src="./images/igor-dem-450-1x.jpg" alt="фото Игорь Демьяненко" />
@@ -231,8 +229,8 @@
                 />
                 <source
                   srcset="./images/olga-rep-450-1x.jpg 450w, ./images/olga-rep-450-2x.jpg 900w"
-                  media="(min-width: 0)"
-                  sizes="450px"
+                  media="(min-width: 480px)"
+                  sizes="450px, 100vw"
                 />
                 <img src="./images/olga-rep-450-1x.jpg" alt="фото Ольга Репина" />
               </picture>
@@ -287,8 +285,8 @@
                 />
                 <source
                   srcset="./images/nick-tar-450-1x.jpg 450w, ./images/nick-tar-450-2x.jpg 900w"
-                  media="(min-width: 0)"
-                  sizes="450px"
+                  media="(min-width: 480px)"
+                  sizes="450px, 100vw"
                 />
                 <img src="./images/nick-tar-450-1x.jpg" alt="фото Николай Тарасов" />
               </picture>
@@ -342,8 +340,8 @@
                 />
                 <source
                   srcset="./images/mich-erm-450-1x.jpg 450w, ./images/mich-erm-450-2x.jpg 900w"
-                  media="(min-width: 0)"
-                  sizes="450px"
+                  media="(min-width: 480px)"
+                  sizes="450px, 100vw"
                 />
                 <img src="./images/mich-erm-450-1x.jpg" alt="фото Михаил Ермаков" />
               </picture>
