--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
       <div class="header__container container">
         <!-- Логотип сайта -->
         <a href="" class="logo"><span class="logo__accent">Web</span>Studio</a>
-        <button type="button" class="menu-button">
+        <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
           <svg width="40" height="40" class="menu-button__icon">
             <use href="./images/new-sprite.svg#icon-menu"></use>
-            <use href="./images/new-sprite.svg#icon-close_menu"></use>
           </svg>
         </button>
         <!-- Навигация, телефон, контакты -->
@@ -68,6 +67,47 @@
         </ul>
       </div>
     </header>
+
+    <div class="menu-container js-menu-container is-open" id="mobile-menu">
+      <button type="button" class="menu-toggle js-close-menu">
+        <svg width="40" height="40" class="menu-button__icon">
+            <use href="./images/new-sprite.svg#icon-close_menu"></use>
+          </svg>
+      </button>
+      <nav class="navigation">
+          <ul class="navigation-set">
+            <li class="navigation-set__item">
+              <a href="./index.html" class="navigation-set__link navigation-set__link--current"
+                >Студия</a
+              >
+            </li>
+            <li class="navigation-set__item">
+              <a href="./portfolio.html" class="navigation-set__link">Портфолио</a>
+            </li>
+            <li class="navigation-set__item">
+              <a href="" class="navigation-set__link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts-set">
+          <li class="contacts-set__item">
+            <a href="mailto:info@devstudio.com" class="contacts-set__link">
+              <svg width="16" height="12" class="contacts-set__icon">
+                <use href="./images/new-sprite.svg#icon-envelope"></use>
+              </svg>
+              <span> info@devstudio.com</span>
+            </a>
+          </li>
+          <li class="contacts-set__item">
+            <a href="tel:+380961111111" class="contacts-set__link">
+              <svg width="10" height="16" class="contacts-set__icon">
+                <use href="./images/new-sprite.svg#icon-phone"></use>
+              </svg>
+              <span>+380 961 111 111</span>
+            </a>
+          </li>
+        </ul>
+    </div>
 
     <main>
       <!-- Заголовок страницы -->
