--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
         </button>
         <!-- Навигация, телефон, контакты -->
         <nav class="navigation">
-          <ul class="navigation-set">
-            <li class="navigation-set__item">
-              <a href="./index.html" class="navigation-set__link navigation-set__link--current"
+          <ul class="navigation-set-flex">
+            <li class="navigation-set-flex__item">
+              <a href="./index.html" class="navigation-set-flex__link navigation-set-flex__link--current"
                 >Студия</a
               >
             </li>
-            <li class="navigation-set__item">
-              <a href="./portfolio.html" class="navigation-set__link">Портфолио</a>
+            <li class="navigation-set-flex__item">
+              <a href="./portfolio.html" class="navigation-set-flex__link">Портфолио</a>
             </li>
-            <li class="navigation-set__item">
-              <a href="" class="navigation-set__link">Контакты</a>
+            <li class="navigation-set-flex__item">
+              <a href="" class="navigation-set-flex__link">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -74,7 +74,7 @@
             <use href="./images/new-sprite.svg#icon-close_menu"></use>
           </svg>
       </button>
-      <nav class="navigation">
+      <nav>
           <ul class="navigation-set">
             <li class="navigation-set__item">
               <a href="./index.html" class="navigation-set__link navigation-set__link--current"
