--- a/portfolio.html
+++ b/portfolio.html
@@ -23,39 +23,49 @@
   <body>
     <!-- Шапка сайта -->
     <header class="header">
-      <div class="container header__container">
+      <div class="header__container container">
         <!-- Логотип сайта -->
         <a href="" class="logo"><span class="logo__accent">Web</span>Studio</a>
-        <!-- Навигация, телефон, нотакты -->
-        <!-- Основной блок навигации -->
-        <nav class="navigation">
-          <ul class="navigation-set">
-            <li class="navigation-set__item">
-              <a href="./index.html" class="navigation-set__link">Студия</a>
-            </li>
-            <li class="navigation-set__item">
-              <a href="./portfolio.html" class="navigation-set__link navigation-set__link--current"
-                >Портфолио</a
+        <button
+          type="button"
+          class="menu-button js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg width="40" height="40" class="menu-button__icon">
+            <use href="./images/new-sprite.svg#icon-menu"></use>
+          </svg>
+        </button>
+        <!-- Навигация, телефон, контакты -->
+        <nav class="navigation-flex">
+          <ul class="navigation-set-flex">
+            <li class="navigation-set-flex__item">
+              <a
+                href="./index.html"
+                class="navigation-set-flex__link navigation-set-flex__link--current"
+                >Студия</a
               >
             </li>
-            <li class="navigation-set__item">
-              <a href="" class="navigation-set__link">Контакты</a>
+            <li class="navigation-set-flex__item">
+              <a href="./portfolio.html" class="navigation-set-flex__link">Портфолио</a>
+            </li>
+            <li class="navigation-set-flex__item">
+              <a href="" class="navigation-set-flex__link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <!-- Телефон и e-mail -->
-        <ul class="contacts-set">
-          <li class="contacts-set__item">
-            <a href="mailto:info@devstudio.com" class="contacts-set__link">
-              <svg width="16" height="12" class="contacts-set__icon">
+        <ul class="contacts-set-flex">
+          <li class="contacts-set-flex__item">
+            <a href="mailto:info@devstudio.com" class="contacts-set-flex__link">
+              <svg width="16" height="12" class="contacts-set-flex__icon">
                 <use href="./images/new-sprite.svg#icon-envelope"></use>
               </svg>
               <span> info@devstudio.com</span>
             </a>
           </li>
-          <li class="contacts-set__item">
-            <a href="tel:+380961111111" class="contacts-set__link">
-              <svg width="10" height="16" class="contacts-set__icon">
+          <li class="contacts-set-flex__item">
+            <a href="tel:+380961111111" class="contacts-set-flex__link">
+              <svg width="10" height="16" class="contacts-set-flex__icon">
                 <use href="./images/new-sprite.svg#icon-phone"></use>
               </svg>
               <span>+380 961 111 111</span>
@@ -64,6 +74,47 @@
         </ul>
       </div>
     </header>
+
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button type="button" class="menu-toggle js-close-menu">
+        <svg width="40" height="40" class="menu-button__icon">
+          <use href="./images/new-sprite.svg#icon-close_menu"></use>
+        </svg>
+      </button>
+      <nav>
+        <ul class="navigation-set">
+          <li class="navigation-set__item">
+            <a href="./index.html" class="navigation-set__link navigation-set__link--current"
+              >Студия</a
+            >
+          </li>
+          <li class="navigation-set__item">
+            <a href="./portfolio.html" class="navigation-set__link">Портфолио</a>
+          </li>
+          <li class="navigation-set__item">
+            <a href="" class="navigation-set__link">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="contacts-set">
+        <li class="contacts-set__item">
+          <a href="tel:+380961111111" class="contacts-set__link-tel">
+            <span>+380 961 111 111</span>
+          </a>
+        </li>
+        <li class="contacts-set__item">
+          <a href="mailto:info@devstudio.com" class="contacts-set__link-mail">
+            <span> info@devstudio.com</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="social-mob">
+        <li class="social-mob__item"><a href="" class="social-mob__link">Instagram</a></li>
+        <li class="social-mob__item"><a href="" class="social-mob__link">Twitter</a></li>
+        <li class="social-mob__item"><a href="" class="social-mob__link">Facebook</a></li>
+        <li class="social-mob__item"><a href="" class="social-mob__link">LinkedIn</a></li>
+      </ul>
+    </div>
 
     <!-- Уникальный контент -->
     <main>
@@ -257,72 +308,75 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer class="footer">
-      <!-- Адрес -->
-      <div class="container footer__container">
+    <footer class="section section--footer">
+      <div class="container container--footer">
         <div class="logo-address-container">
           <a href="" class="logo"
             ><span class="logo__accent">Web</span><span class="logo__accent-studio">Studio</span></a
           >
           <address class="address">
-            <ul class="address-set">
-              <li class="address-set__item">
+            <ul>
+              <li class="address__item">
                 <a
                   href="https://goo.gl/maps/mUnxRLxeDmvpBzua8"
                   target="_blank"
-                  class="address-set__link address-set__link--accent"
+                  class="address__link address-set__link--accent"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li class="address-set__item">
-                <a href="mailto:info@devstudio.com" class="address-set__link">info@devstudio.com</a>
+              <li class="address__item">
+                <a href="mailto:info@devstudio.com" class="address__link">info@devstudio.com</a>
               </li>
-              <li class="address-set__item">
-                <a href="tel:+380961111111" class="address-set__link">+380 961 111 111</a>
+              <li class="address__item">
+                <a href="tel:+380961111111" class="address__link">+380 961 111 111</a>
               </li>
             </ul>
           </address>
         </div>
-        <!-- Присоединяйтесь -->
         <div class="join">
           <p class="join__text">присоединяйтесь</p>
-          <ul class="join-set">
-            <li class="join-set__item">
-              <a href="" class="join-set__link">
-                <svg width="20" height="20" class="join-set__icon">
+          <ul class="social-icons-set join__social-icons-set">
+            <li class="social-icons-set__item">
+              <a href="" class="social-icons-set__link social-icons-set__link--bg-color">
+                <svg width="20" height="20" class="social-icons-set__icon">
                   <use href="./images/new-sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-set__item">
-              <a href="" class="join-set__link">
-                <svg width="20" height="20" class="join-set__icon">
+            <li class="social-icons-set__item">
+              <a href="" class="social-icons-set__link social-icons-set__link--bg-color">
+                <svg width="20" height="20" class="social-icons-set__icon">
                   <use href="./images/new-sprite.svg#icon-twiter"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-set__item">
-              <a href="" class="join-set__link">
-                <svg width="20" height="20" class="join-set__icon">
+            <li class="social-icons-set__item">
+              <a href="" class="social-icons-set__link social-icons-set__link--bg-color">
+                <svg width="20" height="20" class="social-icons-set__icon">
                   <use href="./images/new-sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-set__item">
-              <a href="" class="join-set__link">
-                <svg width="20" height="20" class="join-set__icon">
+            <li class="social-icons-set__item">
+              <a href="" class="social-icons-set__link social-icons-set__link--bg-color">
+                <svg width="20" height="20" class="social-icons-set__icon">
                   <use href="./images/new-sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <!-- Подпишитесь на рассылку -->
         <form class="sign-form">
-          <label class="sign-form__label">
-            Подпишитесь на рассылку
-            <input type="email" name="email" class="sign-form__input" placeholder="E-mail" />
-          </label>
+          <div>
+            <label for="sign-form" class="sign-form__label">Подпишитесь на рассылку</label>
+            <input
+              id="sign-form"
+              type="email"
+              name="email"
+              class="sign-form__input"
+              placeholder="E-mail"
+            />
+          </div>
           <button type="submit" class="sign-form__button">
             Подписаться
             <svg width="24" height="24" class="sign-form__button-icon">
@@ -332,5 +386,70 @@
         </form>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal" data-modal-open>
+        <button class="modal__close-button" data-modal-close>
+          <svg width="11" height="11" class="modal__close-icon">
+            <use href="./images/new-sprite.svg#icon-close"></use>
+          </svg>
+        </button>
+        <form class="callback-form">
+          <p class="callback-form__title">Оставьте свои данные, мы вам перезвоним</p>
+          <label class="callback-form__label">
+            Имя
+            <span class="callback-form__wrap">
+              <input type="text" name="name" class="callback-form__input" />
+              <svg width="18" height="18" class="callback-form__icon">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="callback-form__label">
+            Телефон
+            <span class="callback-form__wrap">
+              <input type="tel" name="tel" class="callback-form__input" />
+              <svg width="18" height="18" class="callback-form__icon">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="callback-form__label">
+            Почта
+            <span class="callback-form__wrap">
+              <input type="email" name="email" class="callback-form__input" />
+              <svg width="18" height="18" class="callback-form__icon">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="callback-form__label">
+            Комментарий
+            <textarea
+              name="comment"
+              placeholder="Введите текст"
+              class="callback-form__comment"
+            ></textarea>
+          </label>
+          <label class="callback-form__checkbox-label">
+            <input type="checkbox" class="callback-form__checkbox-input visually-hidden" />
+            <svg width="16" height="15" class="callback-form__checkbox-icon">
+              <use href="./images/icons.svg#icon-check"></use>
+            </svg>
+            Соглашаюсь с рассылкой и принимаю<a href="" class="callback-form__policy"
+              >Условия договора</a
+            >
+          </label>
+          <button type="submit" class="callback-form__callback-button">Отправить</button>
+        </form>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
